--- a/02-workflow.html
+++ b/02-workflow.html
@@ -150,5 +150,7 @@ Run this command:
     <script>
       var slideshow = remark.create();
     </script>
+
+Back to [Table of Contents](./index.html)
   </body>
 </html>
