--- a/04-quality.html
+++ b/04-quality.html
@@ -208,5 +208,7 @@ if __name__ == '__main__':
     <script>
       var slideshow = remark.create();
     </script>
+
+Back to [Table of Contents](./index.html)
   </body>
 </html>
