--- a/05-structure.html
+++ b/05-structure.html
@@ -219,5 +219,7 @@ Noble's Rules were written before computational notebooks became widespread.
     <script>
       var slideshow = remark.create();
     </script>
+
+Back to [Table of Contents](./index.html)
   </body>
 </html>
