--- a/08-conclusion.html
+++ b/08-conclusion.html
@@ -61,5 +61,7 @@
     <script>
       var slideshow = remark.create();
     </script>
+
+Back to [Table of Contents](./index.html)
   </body>
 </html>
