--- a/03-automation.html
+++ b/03-automation.html
@@ -147,5 +147,7 @@
     <script>
       var slideshow = remark.create();
     </script>
+
+Back to [Table of Contents](./index.html)
   </body>
 </html>
