--- a/06-sharing.html
+++ b/06-sharing.html
@@ -165,5 +165,7 @@ Variables
     <script>
       var slideshow = remark.create();
     </script>
+
+Back to [Table of Contents](./index.html)
   </body>
 </html>
